# rizzy

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: release.yaml  rust.yml
src/: lib.rs  main.rs  rizzy.rs  timezones.rs  tizzy.rs
tests/: cli.rs  some.log.file
tests/snapshots/: cli__from_readme.snap  cli__timezone_spelling.snap
