[package]
name = "rizzy"
version = "0.1.2"
edition = "2018"
description = "Filter text lines, converting any encountered times to a localized timezone"
authors = ["Matt Godbolt <matt.godbolt@aquatic.com>"]
license-file = "LICENSE.md"

[dependencies]
clap = "3.0.0-beta.4"
chrono = "0.4.19"
chrono-tz = "0.5.3"
lazy_static = "1.4.0"
regex = "1.5.4"
