[package]
name = "rizzy"
version = "0.1.5"
edition = "2018"
description = "Filter text lines, converting any encountered times to a localized timezone"
authors = ["Matt Godbolt <matt.godbolt@aquatic.com>"]
readme = "README.md"
license-file = "LICENSE.md"
repository = "https://github.com/aquanauts/rizzy"
keywords = ["filter", "timezone"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "~3.0.14", features = ["cargo", "derive"] }
chrono = "0.4.19"
chrono-tz = "0.6.1"
lazy_static = "1.4.0"
regex = "1.5.4"
