[package]
name = "rizzy"
version = "0.1.5"
edition = "2018"
description = "Filter text lines, converting any encountered times to a localized timezone"
authors = ["Matt Godbolt <matt.godbolt@aquatic.com>"]
readme = "README.md"
license-file = "LICENSE.md"
repository = "https://github.com/aquanauts/rizzy"
keywords = ["filter", "timezone"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "~3.0.14", features = ["cargo", "derive"] }
chrono = "0.4.19"
chrono-tz = { git = "https://github.com/siedentop/chrono-tz", rev = "6bf301cf27efaa5e65d33d29c6de8180793a0bed" }
lazy_static = "1.4.0"
regex = "1.5.4"
auto_correct_n_suggest = "1.0.0"
eyre = "0.6.6"
color-eyre = "0.6.0"
thiserror = "1.0.30"
